--- a/Day3/annotation.Rmd
+++ b/Day3/annotation.Rmd
@@ -1,8 +1,9 @@
 ---
 title: "Annotation"
 author: "Pietro Franceschi"
-output:
-  ioslides_presentation: default
+output: 
+  ioslides_presentation:
+    css: "../mycss.css"
 ---
 
 ```{r setup, include=FALSE}
@@ -11,34 +12,9 @@ library(knitr)
 ```
 
 
-```{css}
-
-slides > slide {
-  background: linear-gradient(#ffffff, #ffffff 85%, #ffffff);
-  background-color: white;
-}
-
-
-#notes {
-  color: blue;
-}
-
-del {
-  color: red;
-  text-decoration: none;
-}
-
-strong {
-  color: #404040;
-}
-
-```
-
-
-
 ## Annotation
 
-~~Annotation~~ is the process of **going "back"** from the variables measured in an untargeted metabolomics experiment to the corresponding metabolites.
+~~Annotation~~ is the process of **going "back"** from the features measured in an untargeted metabolomics experiment to the corresponding metabolites.
 
 ### Challenges
 
@@ -51,15 +27,13 @@ strong {
 In the case of MS based experiments, the process of annotation requires the interpretation of the ionization pattern of each molecule and the additional information which can be derived from chromatography and fragmentation experiments
 
 1. Chemical expertise
-2. Database of standards
+2. Database of standards (in-house or on-line)
 3. Fragmentation experiments
 4. Chemoinformatics and predictive models
 
 
 
 
-
-1. Analytical and chemical experience 
 
 
 
