--- a/Day1/False_Positives.Rmd
+++ b/Day1/False_Positives.Rmd
@@ -19,7 +19,7 @@ This first demo deals with "random organization". As we discussed in the lecture
 * can mirror a population level property
 * can be the result of a "unlucky" sampling
 
-To understand the second point, just consider an hypothetic sampling of the human population made by an extraterrestrial entity. If he/she (it?) random sample a couple of humans, it will likely conclude that we are all Chinese! 
+To understand the second point, just consider an hypothetical sampling of the human population made by an extraterrestrial entity. If he/she (it?) random sample a couple of humans, it will likely conclude that we are all Chinese! 
 
 Let's make a more scientific example. Let's create a fake metabolomics experiment (but it can be everything you like ...) where I'm measuring 1000 **independent** variables on a group of samples. And let's suppose that I want to study the correlation between the different variables to infer new regulatory networks ...
 
@@ -28,7 +28,7 @@ To simulate my dummy experiment I will fill my data matrices with random numbers
 ```{r}
 ## Random expression data matrix
 dummy_data <- tibble(nsamples = seq(10,500,10)) %>% 
-  mutate(DM = map(nsamples,~matrix(rnorm(1000*.x), ncol = 1000)))
+  mutate(DM = map(nsamples,function(x) matrix(rnorm(1000*x), ncol = 1000)))
 
 
 head(dummy_data)
@@ -44,10 +44,10 @@ OK, let's calculate the correlation among the different variables in all the 40 
 ## I'm using purrr
 
 dummy_data <- dummy_data %>% 
-  mutate(varCorr = map(DM,~cor(.x)))
+  mutate(varCorr = map(DM,function(f) cor(f)))
 ```
 
-Just to see what's going on let's give a look to one of the correlation matrices, actually the first 100 variables
+Just to see what's going on let's give a look to one of the correlation matrices, actually only to the first 100 variables
 
 ```{r}
 dim(dummy_data$varCorr[[3]])
@@ -95,7 +95,7 @@ The code below gives you the indexes of the variables showing high correlation (
 
 
 ```{r}
-highcorrid <- which(dummy_data$uptri[[1]] > 0.95 & dummy_data$varCorr[[1]] != 1, arr.ind = TRUE)
+highcorrid <- which(dummy_data$varCorr[[1]] > 0.95 & dummy_data$varCorr[[1]] != 1, arr.ind = TRUE)
 highcorrid
 ```
 
@@ -117,7 +117,7 @@ Before giving the chance to you to play with some random science, let's look oh 
 ```{r}
 dummy_data %>% 
   filter(nsamples %in% c(10,100,300, 500)) %>% 
-  dplyr::select(nsamples, uptri) %>%                              ## this is needed because a function called `select` is abiguous
+  dplyr::select(nsamples, uptri) %>%                  ## this is needed because a function called `select` is abiguous
   unnest(uptri) %>% 
   ggplot() + 
   geom_histogram(aes(x = uptri, fill = factor(nsamples)), alpha = 0.5, col = "white", binwidth = 0.05) + 
@@ -130,7 +130,6 @@ What we see here is interesting, the probability of getting high correlation coe
 
 **Something for you!**
 
-0. Go back to the code I used to plot the correlation matrix and try to rewrite the nested function by using pipes ...
 1. Play around and try to understand what I did
 2. Simulate an experiment where I have two classes of samples (10 treated, 10 controls) and I'm characterizing them with an array of new machines able to measure 5, 10, 100, 1000, 10000 variables. Fill each data matrix with random numbers. In each case calculate the p-value of an univariate t-test for each variable (you will have 5, 10, 1000, 10000 p-values). Do you find p-values lower than 0.05? Can you plot the histograms of the p-values?
 
@@ -138,12 +137,43 @@ What we see here is interesting, the probability of getting high correlation coe
 Many of the function you need to do that are present in my demo. In addition:
 
 ```{r}
-## Tool of r functions
-
-## t.test
-## performs a t test. 
-## To get the help ?t.test
-
+ex2 <- tibble(nvar = c(5,10,100,1000,10000))
+ex2
 ```
+
+```{r}
+ex2 <- ex2 %>% 
+  mutate(A = map(nvar,function(x) matrix(rnorm(x*10), nrow = 10)))
+
+ex2
+```
+
+```{r}
+ex2 <- ex2 %>% 
+  mutate(B = map(nvar,function(x) matrix(rnorm(x*10), nrow = 10)))
+
+ex2
+```
+
+
+```{r}
+myt <- function(m,n) {
+  ps <- rep(0,ncol(m))
+  for (i in 1:length(ps)){
+    myt <- t.test(m[,i],n[,i])
+    ps[i] <- myt$p.value
+  }
+  return(ps)
+}
+```
+
+
+```{r}
+ex2 <- ex2 %>% 
+  mutate(ps = map2(A,B,function(x,y) myt(x,y)))
+
+ex2
+```
+
 
 
