--- a/Day1/Our_R_cheatsheet.Rmd
+++ b/Day1/Our_R_cheatsheet.Rmd
@@ -112,6 +112,48 @@ my_first_tibble$determinant[[1]]
 ```
 
 
+## Homework
+Create a tibble that contains 100 random sampling from a normal distribution (mu = 0, sd = 1 ... rnorm())
+
+
+```{r}
+Sample <- paste0("s",1:100)
+```
+
+
+```{r}
+your_tibble <- tibble(sample = Sample)
+
+your_tibble
+```
+
+```{r}
+your_tibble <- your_tibble %>% 
+  mutate(random = map(sample, function(x) runif(1000)))
+
+your_tibble
+```
+
+```{r}
+your_tibble <- your_tibble %>% 
+  mutate(means = map_dbl(random, function(l) mean(l)))
+```
+
+
+```{r}
+hist(your_tibble$means)
+```
+
+
+## Homework 2
+
+Show that the means of the 100 samples shows a normal distribution regardless the shape of the distribution we are drawing from
+
+
+To draw from different distributions:
+
+* `runif` for uniform distribution
+* `rlnorm` for the lognormal distribution
 
 
 
