--- a/Day1/statisticaltesting_and_effectsize.Rmd
+++ b/Day1/statisticaltesting_and_effectsize.Rmd
@@ -114,7 +114,7 @@ Statistical testing is a procedure which allows us to quantify this level of con
 ## Let's test that!
 
 1. Suppose that the drug has no effect (H0), so my 50 people are a random drawing from the population
-2. Calculate the distribution of the mean level of cholesterol on groups of 50 people (it is not the distribution of cholesterol in the population!)
+2. Calculate the distribution of the mean level of cholesterol on groups of 50 people (mind the gap! ... it is not the distribution of cholesterol in the population!)
 3. Calculate the probability of obtaining at least the observed value from this distribution (p-value)
 4. Reject the H0 if the p-value is lower than the selected threshold
 
